--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -164,7 +164,7 @@
       </div>
       <div class="w3l_logo">
         <h1>
-          <a href="index.html"
+          <a routerLink="/home"
             >KeyShop<span>Senin mağazan. Senin yerin.</span></a
           >
         </h1>
@@ -213,7 +213,7 @@
         </div>
         <div class="collapse navbar-collapse" id="bs-megadropdown-tabs">
           <ul class="nav navbar-nav">
-            <li><a href="index.html">Anasayfa</a></li>
+            <li><a routerLink="/home">Anasayfa</a></li>
             <!-- Mega Menu -->
             <li class="dropdown">
               <a href="prof" class="dropdown-toggle act" data-toggle="dropdown"
@@ -261,7 +261,7 @@
               </ul>
             </li>
             <li><a href="about.html">Hakkımızda</a></li>
-            <li><a href="contact.html">İletişim</a></li>
+            <li><a routerLink="/contact">İletişim</a></li>
           </ul>
         </div>
       </nav>
