fix links & team photos & about us

--- a/src/app/_components/footer/footer.component.html
+++ b/src/app/_components/footer/footer.component.html
@@ -42,7 +42,7 @@
         <h3>Information</h3>
         <ul class="info">
           <li><a href="about.html">Hakkımızda</a></li>
-          <li><a routerLink="/contact">İletişim</a></li>
+          <li><a routerLink="/iletisim">İletişim</a></li>
           <li><a href="products.html">Ürünler</a></li>
         </ul>
       </div>
