--- a/src/app/_components/item-detail/item-detail.component.html
+++ b/src/app/_components/item-detail/item-detail.component.html
@@ -10,7 +10,7 @@
   <div class="container">
     <ul>
       <li>
-        <a href="index.html"
+        <a routerLink="/"
           ><span class="glyphicon glyphicon-home" aria-hidden="true"></span>
           Home</a
         >
