--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -164,9 +164,7 @@
       </div>
       <div class="w3l_logo">
         <h1>
-          <a routerLink="/home"
-            >KeyShop<span>Senin mağazan. Senin yerin.</span></a
-          >
+          <a routerLink="/">KeyShop<span>Senin mağazan. Senin yerin.</span></a>
         </h1>
       </div>
       <div class="search">
@@ -213,7 +211,7 @@
         </div>
         <div class="collapse navbar-collapse" id="bs-megadropdown-tabs">
           <ul class="nav navbar-nav">
-            <li><a routerLink="/home">Anasayfa</a></li>
+            <li><a routerLink="/">Anasayfa</a></li>
             <!-- Mega Menu -->
             <li class="dropdown">
               <a href="prof" class="dropdown-toggle act" data-toggle="dropdown"
@@ -260,8 +258,8 @@
                 </div>
               </ul>
             </li>
-            <li><a href="about.html">Hakkımızda</a></li>
-            <li><a routerLink="/contact">İletişim</a></li>
+            <li><a routerLink="/hakkimizda">Hakkımızda</a></li>
+            <li><a routerLink="/iletisim">İletişim</a></li>
           </ul>
         </div>
       </nav>
