--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -85,9 +85,14 @@
           <div class="simpleCart_shelfItem">
             <p>
               <span *ngIf="product.discount_price">{{
-                product.discount_price | currency
+                product.price | currency: "₺"
               }}</span>
-              <i class="item_price">{{ product.price | currency }}</i>
+              <i class="item_price" *ngIf="product.discount_price">{{
+                product.discount_price | currency: "₺"
+              }}</i>
+              <i class="item_price" *ngIf="!product.discount_price">{{
+                product.price | currency: "₺"
+              }}</i>
             </p>
             <form action="#" method="post">
               <input type="hidden" name="cmd" value="_cart" />
@@ -99,108 +104,7 @@
           </div>
         </div>
       </div>
-      <!-- <div class="col-md-3 agileinfo_new_products_grid">
-        <div class="agile_ecommerce_tab_left agileinfo_new_products_grid1">
-          <div class="hs-wrapper hs-wrapper1">
-            <img src="assets/images/27.jpg" alt=" " class="img-responsive" />
-            <img src="assets/images/28.jpg" alt=" " class="img-responsive" />
-            <img src="assets/images/29.jpg" alt=" " class="img-responsive" />
-            <img src="assets/images/30.jpg" alt=" " class="img-responsive" />
-            <img src="assets/images/31.jpg" alt=" " class="img-responsive" />
-            <div class="w3_hs_bottom w3_hs_bottom_sub">
-              <ul>
-                <li>
-                  <a href="#" data-toggle="modal" data-target="#myModal"
-                    ><span
-                      class="glyphicon glyphicon-eye-open"
-                      aria-hidden="true"
-                    ></span
-                  ></a>
-                </li>
-              </ul>
-            </div>
-          </div>
-          <h5><a href="single.html">Black Phone</a></h5>
-          <div class="simpleCart_shelfItem">
-            <p><span>$380</span> <i class="item_price">$370</i></p>
-            <form action="#" method="post">
-              <input type="hidden" name="cmd" value="_cart" />
-              <input type="hidden" name="add" value="1" />
-              <input type="hidden" name="w3ls_item" value="Black Phone" />
-              <input type="hidden" name="amount" value="370.00" />
-              <button type="submit" class="w3ls-cart">Add to cart</button>
-            </form>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-3 agileinfo_new_products_grid">
-        <div class="agile_ecommerce_tab_left agileinfo_new_products_grid1">
-          <div class="hs-wrapper hs-wrapper1">
-            <img src="assets/images/34.jpg" alt=" " class="img-responsive" />
-            <img src="assets/images/33.jpg" alt=" " class="img-responsive" />
-            <img src="assets/images/32.jpg" alt=" " class="img-responsive" />
-            <img src="assets/images/35.jpg" alt=" " class="img-responsive" />
-            <img src="assets/images/36.jpg" alt=" " class="img-responsive" />
-            <div class="w3_hs_bottom w3_hs_bottom_sub">
-              <ul>
-                <li>
-                  <a href="#" data-toggle="modal" data-target="#myModal5"
-                    ><span
-                      class="glyphicon glyphicon-eye-open"
-                      aria-hidden="true"
-                    ></span
-                  ></a>
-                </li>
-              </ul>
-            </div>
-          </div>
-          <h5><a href="single.html">Kids Toy</a></h5>
-          <div class="simpleCart_shelfItem">
-            <p><span>$150</span> <i class="item_price">$100</i></p>
-            <form action="#" method="post">
-              <input type="hidden" name="cmd" value="_cart" />
-              <input type="hidden" name="add" value="1" />
-              <input type="hidden" name="w3ls_item" value="Kids Toy" />
-              <input type="hidden" name="amount" value="100.00" />
-              <button type="submit" class="w3ls-cart">Add to cart</button>
-            </form>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-3 agileinfo_new_products_grid">
-        <div class="agile_ecommerce_tab_left agileinfo_new_products_grid1">
-          <div class="hs-wrapper hs-wrapper1">
-            <img src="assets/images/37.jpg" alt=" " class="img-responsive" />
-            <img src="assets/images/38.jpg" alt=" " class="img-responsive" />
-            <img src="assets/images/39.jpg" alt=" " class="img-responsive" />
-            <img src="assets/images/40.jpg" alt=" " class="img-responsive" />
-            <img src="assets/images/41.jpg" alt=" " class="img-responsive" />
-            <div class="w3_hs_bottom w3_hs_bottom_sub">
-              <ul>
-                <li>
-                  <a href="#" data-toggle="modal" data-target="#myModal6"
-                    ><span
-                      class="glyphicon glyphicon-eye-open"
-                      aria-hidden="true"
-                    ></span
-                  ></a>
-                </li>
-              </ul>
-            </div>
-          </div>
-          <h5><a href="single.html">Induction Stove</a></h5>
-          <div class="simpleCart_shelfItem">
-            <p><span>$280</span> <i class="item_price">$250</i></p>
-            <form action="#" method="post">
-              <input type="hidden" name="cmd" value="_cart" />
-              <input type="hidden" name="add" value="1" />
-              <input type="hidden" name="w3ls_item" value="Induction Stove" />
-              <input type="hidden" name="amount" value="250.00" />
-              <button type="submit" class="w3ls-cart">Add to cart</button>
-            </form>
-          </div>
-        </div>
-      </div> -->
+
       <div class="clearfix"></div>
     </div>
   </div>
