--- a/src/app/_components/footer/footer.component.html
+++ b/src/app/_components/footer/footer.component.html
@@ -30,7 +30,7 @@
           </li>
           <li>
             <i class="glyphicon glyphicon-envelope" aria-hidden="true"></i
-            ><a href="mailto:info@example.com"> keyshop@example.com</a>
+            ><a href="mailto:info@example.com"> info@keyshop.com</a>
           </li>
           <li>
             <i class="glyphicon glyphicon-earphone" aria-hidden="true"></i>+1234
@@ -41,7 +41,7 @@
       <div class="col-md-3 w3_footer_grid">
         <h3>Information</h3>
         <ul class="info">
-          <li><a href="about.html">Hakkımızda</a></li>
+          <li><a routerLink="/hakkimizda">Hakkımızda</a></li>
           <li><a routerLink="/iletisim">İletişim</a></li>
           <li><a href="products.html">Ürünler</a></li>
         </ul>
