--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -60,12 +60,8 @@
         *ngFor="let product of productList"
       >
         <div class="agile_ecommerce_tab_left agileinfo_new_products_grid1">
-          <div class="">
+          <div class="hs-wrapper">
             <img [src]="product.image" alt=" " class="img-responsive" />
-            <!-- <img src="assets/images/23.jpg" alt=" " class="img-responsive" />
-            <img src="assets/images/24.jpg" alt=" " class="img-responsive" />
-            <img src="assets/images/22.jpg" alt=" " class="img-responsive" />
-            <img src="assets/images/26.jpg" alt=" " class="img-responsive" /> -->
             <div class="w3_hs_bottom w3_hs_bottom_sub">
               <ul>
                 <li>
