--- a/src/assets/css/fasthover.css
+++ b/src/assets/css/fasthover.css
@@ -26,9 +26,9 @@
 	-moz-animation-play-state: paused;
 	-o-animation-play-state: paused;
 	-ms-animation-play-state: paused;
-	animation-play-state: paused;	
+	animation-play-state: paused;
 }
-.hs-wrapper img:nth-child(1){
+/* .hs-wrapper img:nth-child(1){
 	z-index: 9;
 }
 .hs-wrapper img:nth-child(2){
@@ -117,8 +117,8 @@
 	left: 20px;
 	top: 200px;
 	color: #fff;
-	-moz-box-sizing: border-box; 
-	-webkit-box-sizing: border-box; 
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
 	font-size: 38px;
 	border-top: 1px solid rgba(255,255,255,0.3);
@@ -223,7 +223,7 @@
 	.hs-wrapper2 {
 		width: 186px !important;
 		height: 245px !important;
-	}  
+	}
 }
 @media (max-width:640px){
 	.hs-wrapper {
@@ -274,4 +274,4 @@
 		width: 243px !important;
 		height: 325px !important;
 	}
-}
+} */
