about us photos & item detail service and component

--- a/src/app/_components/about-us/about-us.component.html
+++ b/src/app/_components/about-us/about-us.component.html
@@ -93,7 +93,11 @@
         </div>
       </div>
       <div class="col-md-2 wthree_team_grid">
-        <img src="assets/images/team/t6.png" alt=" " class="img-responsive" />
+        <img
+          src="assets/images/team/kenan.jpg"
+          alt=" "
+          class="img-responsive"
+        />
         <h4>Mirkenan Kazımzade</h4>
         <div class="agileits_social_button">
           <ul>
@@ -117,7 +121,11 @@
         </div>
       </div>
       <div class="col-md-2 wthree_team_grid">
-        <img src="assets/images/team/t7.png" alt=" " class="img-responsive" />
+        <img
+          src="assets/images/team/jahad.jpeg"
+          alt=" "
+          class="img-responsive"
+        />
         <h4>Cahad Farzızade</h4>
         <div class="agileits_social_button">
           <ul>
