--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -76,7 +76,7 @@
             </div>
           </div>
           <h5>
-            <a href="single.html">{{ product.item_name }}</a>
+            <a routerLink="/urun/{{ product.id }}">{{ product.item_name }}</a>
           </h5>
           <div class="simpleCart_shelfItem">
             <p>
