--- a/src/app/_components/about-us/about-us.component.html
+++ b/src/app/_components/about-us/about-us.component.html
@@ -47,7 +47,7 @@
         <div class="clearfix"></div>
       </div>
       <div class="col-md-6 w3ls_about_grid_right">
-        <img src="assets/images/522.jpg" alt=" " class="img-responsive" />
+        <img src="assets/images/h-banner.png" alt=" " class="img-responsive" />
       </div>
       <div class="clearfix"></div>
     </div>
