--- a/src/app/_components/about-us/about-us.component.html
+++ b/src/app/_components/about-us/about-us.component.html
@@ -126,7 +126,7 @@
           alt=" "
           class="img-responsive"
         />
-        <h4>Cahad Farzızade</h4>
+        <h4>Jahad Farzızada</h4>
         <div class="agileits_social_button">
           <ul>
             <li><a href="#" class="facebook"> </a></li>
