--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -222,36 +222,61 @@
                   <div class="col-sm-3">
                     <ul class="multi-column-dropdown">
                       <h6>Office Paketleri</h6>
-                      <li><a href="products.html">Mobile Phones</a></li>
                       <li>
-                        <a href="products.html">Mp3 Players <span>New</span></a>
+                        <a href="products.html">Microsoft Office 365</a>
                       </li>
-                      <li><a href="products.html">Popular Models</a></li>
                       <li>
-                        <a href="products.html">All Tablets<span>New</span></a>
+                        <a href="products.html"
+                          >Microsoft Word <span>Yeni</span></a
+                        >
+                      </li>
+                      <li>
+                        <a href="products.html">Microsoft Excel </a>
+                      </li>
+                      <li>
+                        <a href="products.html"
+                          >Microsoft PowerPoint<span>Yeni</span></a
+                        >
                       </li>
                     </ul>
                   </div>
                   <div class="col-sm-3">
                     <ul class="multi-column-dropdown">
                       <h6>Eğlence</h6>
-                      <li><a href="products1.html">Laptop</a></li>
-                      <li><a href="products1.html">Desktop</a></li>
                       <li>
-                        <a href="products1.html">Wearables <span>New</span></a>
+                        <a href="products1.html">Netflix</a>
                       </li>
                       <li>
-                        <a href="products1.html"><i>Summer Store</i></a>
+                        <a href="products1.html">Spotify</a>
+                      </li>
+                      <li>
+                        <a href="products1.html">Deezer <span>Yeni</span></a>
+                      </li>
+                      <li>
+                        <a href="products1.html">Amazon Prime Video</a>
+                      </li>
+                      <li>
+                        <a href="products1.html">Blutv <span>Yeni</span></a>
                       </li>
                     </ul>
                   </div>
                   <div class="col-sm-2">
                     <ul class="multi-column-dropdown">
                       <h6>Oyunlar</h6>
-                      <li><a href="products2.html">Tv</a></li>
-                      <li><a href="products2.html">Camera</a></li>
-                      <li><a href="products2.html">AC</a></li>
-                      <li><a href="products2.html">Grinders</a></li>
+                      <li><a href="products2.html">Steam</a></li>
+                      <li>
+                        <a href="products2.html">Ubisoft</a>
+                      </li>
+                      <li>
+                        <a href="products2.html">PlayStation Store</a>
+                      </li>
+                      <li>
+                        <a href="products2.html">Xbox Game Pass</a>
+                      </li>
+                      <li>
+                        <a href="products2.html">Epic Store</a>
+                      </li>
+                      <li><a href="products2.html">Origin</a></li>
                     </ul>
                   </div>
                   <div class="clearfix"></div>
