update home categories

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,6 +22,16 @@
               role="tab"
               data-toggle="tab"
               aria-controls="home"
+              >Tümü</a
+            >
+          </li>
+          <li role="presentation" class="active">
+            <a
+              href="#home"
+              id="home-tab"
+              role="tab"
+              data-toggle="tab"
+              aria-controls="home"
               >Office Paketleri</a
             >
           </li>
