--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -164,7 +164,11 @@
       </div>
       <div class="w3l_logo">
         <h1>
-          <a routerLink="/">KeyShop<span>Senin mağazan. Senin yerin.</span></a>
+          <a routerLink="/"
+            >KeyShop<span class="ozel-font"
+              >Senin mağazan. Senin yerin.</span
+            ></a
+          >
         </h1>
       </div>
       <div class="search">
