--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,3 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~ngx-toastr/toastr';
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@400&display=swap');
