--- a/src/app/_components/item-detail/item-detail.component.html
+++ b/src/app/_components/item-detail/item-detail.component.html
@@ -132,7 +132,17 @@
         <div class="clearfix"></div>
       </div>
       <div class="simpleCart_shelfItem">
-        <p><span>$460</span> <i class="item_price">$450</i></p>
+        <p>
+          <span *ngIf="item.discount_price">{{
+            item.price | currency: "₺"
+          }}</span>
+          <i class="item_price" *ngIf="item.discount_price">{{
+            item.discount_price | currency: "₺"
+          }}</i>
+          <i class="item_price" *ngIf="!item.discount_price">{{
+            item.price | currency: "₺"
+          }}</i>
+        </p>
         <form action="#" method="post">
           <input type="hidden" name="cmd" value="_cart" />
           <input type="hidden" name="add" value="1" />
