--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -28,7 +28,7 @@
           <li role="presentation" class="active">
             <a
               href="#home"
-              id="home-tab"
+              id="tab"
               role="tab"
               data-toggle="tab"
               aria-controls="home"
