--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -184,13 +184,16 @@
         </div>
       </div>
       <div class="cart cart box_1">
-        <form action="#" method="post" class="last">
-          <input type="hidden" name="cmd" value="_cart" />
-          <input type="hidden" name="display" value="1" />
-          <button class="w3view-cart" type="submit" name="submit" value="">
+          <button class="w3view-cart" type="submit" name="submit" value="" (mouseover)="dropdown=true" (mouseout)="dropdown=false">
             <i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
           </button>
-        </form>
+
+          <div *ngIf="dropdown">
+            <div *ngFor="let product of sebet">
+              <p>{{ product.item_name }}</p>
+              <p> {{ product.price }}</p>
+            </div>
+          </div>
       </div>
     </div>
   </div>
