--- a/src/app/_components/shopping-cart/shopping-cart.component.html
+++ b/src/app/_components/shopping-cart/shopping-cart.component.html
@@ -1,3 +1,101 @@
+
+
 <div *ngFor="let product of sebet">
-  <p>{{ product.item_name }}</p>
+  <style>
+.bloc_left_price {
+    color: #c01508;
+    text-align: center;
+    font-weight: bold;
+    font-size: 150%;
+}
+
+.add_to_cart_block .price {
+    color: #c01508;
+    text-align: center;
+    font-weight: bold;
+    font-size: 200%;
+    margin-bottom: 0;
+}
+.add_to_cart_block .price_discounted {
+    color: #343a40;
+    text-align: center;
+    text-decoration: line-through;
+    font-size: 140%;
+}
+.product_rassurance {
+    padding: 10px;
+    margin-top: 15px;
+    background: #ffffff;
+    border: 1px solid #6c757d;
+    color: #6c757d;
+}
+.product_rassurance .list-inline {
+    margin-bottom: 0;
+    text-transform: uppercase;
+    text-align: center;
+}
+.product_rassurance .list-inline li:hover {
+    color: #343a40;
+}
+.reviews_product .fa-star {
+    color: gold;
+}
+.pagination {
+    margin-top: 20px;
+}
+    </style>
+
+    <div class="container mb-4">
+      <div class="row">
+          <div class="col-12">
+              <div class="table-responsive">
+                  <table class="table table-striped">
+                      <thead>
+                          <tr>
+                              <th scope="col"> </th>
+                              <th scope="col">Ürün</th>
+                              <th scope="col">Stock Durumu</th>
+                              <th scope="col" class="text-center">Adet</th>
+                              <th scope="col" class="text-right">Fiyat</th>
+                              <th> </th>
+                          </tr>
+                      </thead>
+                      <tbody>
+                          <tr>
+                              <td><img
+                                [src]="product.image"
+                                class="img-responsive"
+                                alt=""
+                                style='width:20%'
+                              /> </td>
+                              <td><p>{{ product.item_name }}</p></td>
+                              <td>Mevcut</td>
+                              <td><input class="form-control" type="text" value="1" /></td>
+                              <td class="text-right">124,90 €</td>
+                              <td class="text-right"><button class="btn btn-sm btn-danger"><i class="fa fa-trash"></i> </button> </td>
+                          </tr>
+                          <tr>
+                              <td></td>
+                              <td></td>
+                              <td></td>
+                              <td></td>
+                              <td><strong>Toplam: </strong></td>
+                              <td class="text-right"><strong>346,90 €</strong></td>
+                          </tr>
+                      </tbody>
+                  </table>
+              </div>
+          </div>
+          <div class="col mb-2">
+              <div class="row">
+                  <div class="col-sm-12  col-md-6">
+                      <button class="btn btn-block btn-light">Alışverişe Devam Et</button>
+                  </div>
+                  <div class="col-sm-12 col-md-6 text-right">
+                      <button class="btn btn-lg btn-block btn-success text-uppercase">Alışverişi Tamamla</button>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
 </div>
