--- a/src/app/_components/footer/footer.component.html
+++ b/src/app/_components/footer/footer.component.html
@@ -1,4 +1,5 @@
-<!-- newsletter -->
+<!-- newsletter  TODO: deleted haber bulteni-->
+
 <!-- //newsletter -->
 <!-- footer -->
 <div class="footer">
