--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -15,44 +15,12 @@
         data-example-id="togglable-tabs"
       >
         <ul id="myTab" class="nav nav-tabs" role="tablist">
-          <li role="presentation" class="active">
-            <a
-              href="#home"
-              id="home-tab"
-              role="tab"
-              data-toggle="tab"
-              aria-controls="home"
-              >Tümü</a
-            >
-          </li>
-          <li role="presentation" class="active">
-            <a
-              href="#home"
+          <li role="presentation" *ngFor="let category of categories" >
+            <button
               id="tab"
               role="tab"
-              data-toggle="tab"
-              aria-controls="home"
-              >Office Paketleri</a
-            >
-          </li>
-          <li role="presentation">
-            <a
-              href="#audio"
-              role="tab"
-              id="audio-tab"
-              data-toggle="tab"
-              aria-controls="audio"
-              >Eğlence</a
-            >
-          </li>
-          <li role="presentation">
-            <a
-              href="#video"
-              role="tab"
-              id="video-tab"
-              data-toggle="tab"
-              aria-controls="video"
-              >Oyun</a
+              (click)="isClicked = !isClicked" [class.myClass]="isClicked"
+              >{{ category }}</button
             >
           </li>
         </ul>
