--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
     aria-hidden="true"
   >
     <div class="modal-dialog modal-lg">
-      <div class="modal-content">
+      <div class="modal-content" *ngIf="!isLoggedIn">
         <div class="modal-header">
           <button
             type="button"
@@ -19,7 +19,7 @@
           >
             &times;
           </button>
-          <h4 class="modal-title" id="myModalLabel">
+          <h4 class="modal-title" id="myModalLabel" >
             Bekleme! Hemen giriş yap.
           </h4>
         </div>
@@ -94,11 +94,19 @@
                   >
                     <div class="facts">
                       <div class="register">
-                        <form action="#" method="post">
+                        <form (ngSubmit)="onRegister()">
                           <input
                             placeholder="Adı"
-                            name="Name"
+                            name="firstName"
                             type="text"
+                            [(ngModel)]="form.first_name"
+                            required=""
+                          />
+                          <input
+                            placeholder="Soyadı"
+                            name="lastName"
+                            type="text"
+                            [(ngModel)]="form.last_name"
                             required=""
                           />
                           <input
@@ -106,12 +114,16 @@
                             name="Email"
                             type="email"
                             required=""
+                            [(ngModel)]="form.email"
+
                           />
                           <input
                             placeholder="Şifre"
                             name="Password"
                             type="password"
                             required=""
+                            [(ngModel)]="form.password"
+
                           />
                           <div class="sign-up">
                             <input type="submit" value="Hesap Oluştur." />
@@ -148,6 +160,35 @@
                 </div>
               </div>
             </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="modal-content" *ngIf="isLoggedIn">
+        <div class="modal-header">
+          <button
+            type="button"
+            class="close"
+            data-dismiss="modal"
+            aria-hidden="true"
+          >
+            &times;
+          </button>
+          <h4 class="modal-title" id="myModalLabel">
+            Hoşgeldin {{username}}
+          </h4>
+        </div>
+        <div class="modal-body modal-body-sub">
+          <div class="row">
+            <div
+              class="col-md-12 modal_body_left modal_body_left1"
+              style="border-right: 1px dotted #c2c2c2; padding-right: 3em"
+            >
+            <div class="sign-up">
+              <input (click)="logout()" type="submit" value="Çıkış yap" />
+            </div>
+            </div>
+
           </div>
         </div>
       </div>
