--- a/src/app/_components/footer/footer.component.html
+++ b/src/app/_components/footer/footer.component.html
@@ -10,13 +10,13 @@
         <p>İletişim kanallarımız aracılığı ile bize ulaşın</p>
         <ul class="address">
           <li>
-            <i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i
-            >Mersin Üniversitesi<span>Mühendislik Fakültesi</span>
+            <i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i>Mersin Üniversitesi<span>Mühendislik
+              Fakültesi</span>
             <span>Yenişehir/MERSİN</span>
           </li>
           <li>
-            <i class="glyphicon glyphicon-envelope" aria-hidden="true"></i
-            ><a href="mailto:info@example.com"> info@keyshop.com</a>
+            <i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><a href="mailto:info@example.com">
+              info@keyshop.com</a>
           </li>
           <li>
             <i class="glyphicon glyphicon-earphone" aria-hidden="true"></i>+1234
@@ -25,7 +25,7 @@
         </ul>
       </div>
       <div class="col-md-3 w3_footer_grid">
-        <h3>Information</h3>
+        <h3>Bilgiler</h3>
         <ul class="info">
           <li><a routerLink="/hakkimizda">Hakkımızda</a></li>
           <li><a routerLink="/iletisim">İletişim</a></li>
@@ -46,9 +46,7 @@
   <div class="footer-copy">
     <div class="footer-copy1">
       <div class="footer-copy-pos">
-        <a href="#home1" class="scroll"
-          ><img src="assets/images/arrow.png" alt=" " class="img-responsive"
-        /></a>
+        <a href="#home1" class="scroll"><img src="assets/images/arrow.png" alt=" " class="img-responsive" /></a>
       </div>
     </div>
   </div>
@@ -89,7 +87,7 @@
     if (this.subtotal() > 0) {
       items = this.items();
 
-      for (i = 0, len = items.length; i < len; i++) {}
+      for (i = 0, len = items.length; i < len; i++) { }
     }
   });
 </script>
