--- a/src/app/_components/shopping-cart/shopping-cart.component.html
+++ b/src/app/_components/shopping-cart/shopping-cart.component.html
@@ -57,10 +57,11 @@
   <div class="col mb-2">
     <div class="row">
       <div class="col-sm-12  col-md-6">
-        <button class="btn btn-block btn-light">Alışverişe Devam Et</button>
+        <button class="btn btn-block btn-light" routerLink="/">Alışverişe Devam Et</button>
       </div>
       <div class="col-sm-12 col-md-6 text-right">
-        <button class="btn btn-lg btn-block btn-success text-uppercase">Alışverişi Tamamla</button>
+        <button class="btn btn-lg btn-block btn-success text-uppercase" routerLink="/siparis">Alışverişi
+          Tamamla</button>
       </div>
     </div>
   </div>
